# master-pm-agents

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  spec.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md
src/pm_agents/: __init__.py  coordinator.py  state.py  workflow.py
src/pm_agents/agents/: __init__.py  constraints.py  context_mapping.py  discovery.py  prioritization.py  problem_space.py  solution_validation.py
